tests/NormalTests/paczka1/small_fuzzy/92225631.err
Error in line 9: X1ewRL A975 28,4
Error in line 8: l3wolNNdMep S245 35,0
Error in line 6: 65hD0 S245 96,5
